--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcc 'QA'
 - !lcsh 'Mathematicians -- Biography'
 - !lcsh 'Cardano, Girolamo, 1501-1576'
+- GITenberg
 title: 'Jerome Cardan: A Biographical Study'
 url: http://www.gutenberg.org/ebooks/19600
